# GI_Raytracer

./: ..atom-build.yml.swp  .atom-build.yml  .atom-build.yml.save  .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
examples/test_scene/: test.scn
hooks/: install_hooks.sh  pre-commit  pre-commit-clang-format  pre-commit-staged-modified  pre-push
include/: atmosphere.h  bbox.h  camera.h  entities.h  gui.h  halton_enum.h  halton_sampler.h  image.h  light.h  material.h  meshLoader.cpp  meshLoader.h  octree.cpp  octree.h  photon.h  photonMap.cpp  photonMap.h  ray.h  raytracer.h  sceneLoader.cpp  sceneLoader.h  util.cpp  util.h  viewer.h
scenes/caustics/: caustics.scn
scenes/caustics_02/: caustics.scn
scenes/cornell/: test.scn
scenes/foliage/: Rock_Sculpt_test_01_low_UE.FBX  SM_LargePlainsBoulder002.FBX  SM_MERGED_ScotsPine_01_26.FBX  foliage.scn
scenes/glass/: glass.scn
scenes/sponza/: sponza.scn
